--- a/scraper_collections/Cargo.toml
+++ b/scraper_collections/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 reqwest = "0.11.14"
+regex = "1.7.1"
 scraper = "0.14.0"
 select = "0.6.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 tokio = { version = "1.25.0", features = ["full"] }
