--- a/scraper_collections/Cargo.toml
+++ b/scraper_collections/Cargo.toml
@@ -13,3 +13,8 @@ select = "0.6.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tokio = { version = "1.25.0", features = ["full"] }
+html2md = "0.2.14"
+
+[dev-dependencies]
+#for async test
+tokio-test = "*"
