--- a/key_replacer_axum_api/examples/todos/Cargo.toml
+++ b/key_replacer_axum_api/examples/todos/Cargo.toml
@@ -1,10 +1,8 @@
 [package]
-name = "key_replacer_axum_api"
+name = "example-todos"
 version = "0.1.0"
 edition = "2021"
 publish = false
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 axum = { version = "0.6.11" }
@@ -15,11 +13,3 @@ tower-http = { version = "0.4.0", features = ["add-extension", "trace"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.0", features = ["serde", "v4"] }
-diesel = { version = "2.0.0", features = ["mysql"] }
-deadpool-diesel = "0.4.1"
-diesel-async = { version = "0.2.1", features = ["mysql"] }
-dotenvy = "0.15"
-
-[dev-dependencies]
-#for async test
-tokio-test = "*"
