--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,13 @@
 */.idea
-*/target
+*/*/*/.idea
+*/target/*
+*/*/target
+*/*/*/target 
 */Cargo.lock
+*/*/Cargo.lock
+*/*/*/Cargo.lock
 */.DS_Store
 .DS_Store
 */target/
 */*/target
 
-key_replacer_axum_api/examples/diesel-mysql-demo/.idea/
-key_replacer_axum_api/examples/diesel-mysql-demo/Cargo.lock
-key_replacer_axum_api/examples/diesel-mysql-demo/target/
-key_replacer_axum_api/examples/todos/.idea/
-key_replacer_axum_api/examples/todos/Cargo.lock
-key_replacer_axum_api/examples/todos/target/
