--- a/key_replacer_axum_api/Cargo.toml
+++ b/key_replacer_axum_api/Cargo.toml
@@ -16,8 +16,10 @@ tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1.0", features = ["serde", "v4"] }
 diesel = { version = "2.0.0", features = ["mysql"] }
-deadpool-diesel = "0.4.1"
-diesel-async = { version = "0.2.1", features = ["mysql"] }
+#diesel = "2.0.0"
+#deadpool-diesel = "0.4.1"
+deadpool = "0.9.5"
+diesel-async = { version = "0.2.1", features = ["mysql", "deadpool"] }
 dotenvy = "0.15"
 
 [dev-dependencies]
