--- a/key_replacer_axum_api/.env
+++ b/key_replacer_axum_api/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mysql://root:datagrand123.@172.26.22.128:43306/replace_highlight
+INSERT_DATABASE_URL=mysql://root:datagrand123.@172.26.22.128:43306/replace_highlight
 QUERY_DATABASE_URL=mysql://root:datagrand123.@172.26.22.128:43306/fhs
