--- a/scraper_collections/Cargo.toml
+++ b/scraper_collections/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.28"
 reqwest = "0.11.14"
 regex = "1.7.1"
 scraper = "0.15.0"
